# protoc_plugin_scratch

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  WORKSPACE  cargo-bazel-lock.json
.github/: renovate.json5
src/: main.rs
toolchains/: BUILD.bazel
