[package]
edition = "2021"
name = "protoc_plugin_scratch"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# prost-types.workspace = true
# prost.workspace = true
# tonic.workspace = true

[workspace.dependencies]
# prost = "0.12.3"
# prost-types = "0.12.3"
# protoc-gen-prost = "0.2.3"
# protoc-gen-tonic = "0"
# tonic = "0.10.2"
